fix(fontend): align the logo with the navbar
Create two components from the Navbar component, Header and Navber.

--- a/frontend/src/components/Hamburger/styles.module.css
+++ b/frontend/src/components/Hamburger/styles.module.css
@@ -23,7 +23,7 @@
         overflow: visible;
         outline: none;
         box-sizing: border-box;
-        align-self: flex-end;
+        /* align-self: flex-end; */
     }
 
     .hamburger:hover {
