--- a/frontend/src/components/Navbar/styles.module.css
+++ b/frontend/src/components/Navbar/styles.module.css
@@ -1,8 +1,3 @@
-.header {
-    padding: 1.5rem 4rem;
-    display: flex;
-}
-
 .navContainer {
     justify-self: flex-end;
 }
@@ -27,23 +22,6 @@
 }
 
 @media screen and (max-width: 768px) {
-    .header {
-        padding: 1rem;
-        display: flex;
-        flex-direction: column;
-    }
-
-    :global(.mobileMenuIsOpen).header {
-        position: fixed;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        overflow: auto;
-
-        background-color: #b2b1b9;
-    }
-
     .navbar {
         display: none;
 
